--- a/jenkinsfile
+++ b/jenkinsfile
@@ -5,14 +5,14 @@ pipeline{
         steps{
           sh "ls"
           sh "aws rds create-db-instance --db-instance-identifier test-mysql-instance --db-name cpms --db-instance-class db.t2.micro --vpc-security-group-ids sg-0244e3f85210cc582 --engine mysql --engine-version 5.7 --db-parameter-group-name default.mysql5.7 --publicly-accessible  --master-username admin --master-user-password Nareshkumar --allocated-storage 10 --region us-east-2"
-          sleep(450)
+          sleep(100)
           script{
               def cmd = "aws rds describe-db-instances --db-instance-identifier test-mysql-instance --region us-east-2"
               def output = sh(script: cmd,returnStdout: true)
               jsonitem = readJSON text: output
               println(jsonitem)
            }
-           sh "sudo -s sed -i.bak 's/endpoint/${jsonitem['DBInstances'][0]['Endpoint']['Address']}/g' userdata.txt"
+           sh "sudo -S sed -i.bak 's/endpoint/${jsonitem['DBInstances'][0]['Endpoint']['Address']}/g' userdata.txt"
           script{
               def cmd = "aws elb create-load-balancer --name my-load-balancer --subnets subnet-04bb8948 subnet-15e22868 --security-groups sg-0244e3f85210cc582 --region us-east-2 "
               def output = sh(script: cmd,returnStdout: true)
