--- a/jenkinsfile
+++ b/jenkinsfile
@@ -12,7 +12,7 @@ pipeline{
               jsonitem = readJSON text: output
               println(jsonitem)
            }
-           sh "sudo -S sed -i.bak 's/endpoint/${jsonitem['DBInstances'][0]['Endpoint']['Address']}/g' userdata.txt"
+           sh "sudo sed -i.bak 's/endpoint/${jsonitem['DBInstances'][0]['Endpoint']['Address']}/g' userdata.txt"
           script{
               def cmd = "aws elb create-load-balancer --name my-load-balancer --subnets subnet-04bb8948 subnet-15e22868 --security-groups sg-0244e3f85210cc582 --region us-east-2 "
               def output = sh(script: cmd,returnStdout: true)
