--- a/jenkinsfile
+++ b/jenkinsfile
@@ -4,16 +4,16 @@ pipeline{
        stage('hosting application'){
         steps{
           sh "ls"
-          sh "aws rds create-db-instance --db-instance-identifier test-mysql-instance11 --db-name cpms --db-instance-class db.t2.micro --vpc-security-group-ids sg-0244e3f85210cc582 --engine mysql --engine-version 5.7 --db-parameter-group-name default.mysql5.7 --publicly-accessible  --master-username admin --master-user-password Nareshkumar --allocated-storage 10 --region us-east-2"
+          sh "aws rds create-db-instance --db-instance-identifier test-mysql-instance12 --db-name cpms --db-instance-class db.t2.micro --vpc-security-group-ids sg-0244e3f85210cc582 --engine mysql --engine-version 5.7 --db-parameter-group-name default.mysql5.7 --publicly-accessible  --master-username admin --master-user-password Nareshkumar --allocated-storage 10 --region us-east-2"
           sleep(450)
           script{
-              def cmd = "aws rds describe-db-instances --db-instance-identifier test-mysql-instance11 --region us-east-2"
+              def cmd = "aws rds describe-db-instances --db-instance-identifier test-mysql-instance12 --region us-east-2"
               def output = sh(script: cmd,returnStdout: true)
               jsonitem = readJSON text: output
               println(jsonitem)
            }
-           sh "sudo -S sed -i.bak 's/endpoint/${jsonitem['DBInstances'][0]['Endpoint']['Address']}/g' userdata.txt"
-          script{
+           sh "sudo sed -i.bak 's/endpoint/${jsonitem['DBInstances'][0]['Endpoint']['Address']}/g' userdata.txt"
+           script{
               def cmd = "aws elb create-load-balancer --name my-load-balancer --subnets subnet-04bb8948 subnet-15e22868 --security-groups sg-0244e3f85210cc582 --region us-east-2 "
               def output = sh(script: cmd,returnStdout: true)
               jsonitem1 = readJSON text: output
